new update incorporating frontend
